# ehr_audit_system

./: .gitattributes  .gitignore  README.md  roadmap.txt
code/: architecture.dsl  requirements.txt
code/audit_client/: audit_application.py  audit_ehrs.py  audit_program.py
code/audit_client/keys/: alice_rsa_decrypt.pem  alice_tls.crt  bob_rsa_encrypt.pem  bob_tls.crt  carol_tls.crt  david_rsa_decrypt.pem  eve_rsa_encrypt.pem  eve_tls.key
code/audit_server/: audit_db.json  audit_db_blueprint.txt  audit_db_blueprint_2.txt  setup.cfg  swagger.yaml
code/audit_server/keys/: audit_server_tls.crt  audit_server_tls.key
code/ca/keys/: ca.crt  ca.key  ca.srl
code/client/: generate_keys.py
code/client/keys/: alice_rsa_encrypt.pem  alice_tls.key  bob_rsa_decrypt.pem  bob_tls.key  carol_rsa_decrypt.pem  carol_rsa_encrypt.pem  carol_tls.key  david_rsa_encrypt.pem  david_tls.crt  (+3 more)
code/doctor_client/: ehr.py
code/ehr_server/: audit_db.json  ehr_db.json  requirements_dev.txt  setup.cfg
code/flask_tls_client_verify/: FlexCA.key  FlexCA.pem  FlexCA.srl  FlexClient.csr  FlexClient.key  FlexClient.pem  helloworld.html  server.crt  server.csr  server.key  server.pem  server.py
code/server/: README.md  ehr_db.json  setup.cfg  swagger.yaml
code/server/src/ehr_server/: audit.py  ehr.py  ehr_db.py  server.py
code/server/tests/: test_script.sh
code/system_admin/: create_ca.py  generate_keys_for_server.py  generate_keys_for_user.py
code/system_admin_scripts/: generate_keys_for_server.py  generate_keys_for_user.py  regenerate.sh
report/: citations.bib  report.tex
(+94 files in other folders)
