[metadata]
name = ehr-server-drvn
version = 0.0.1
author = Hallgrimur David Egilsson
author_email = author@example.com
description = Server for a prototype of a decentralized audit system that should fulfill security goals
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/hallgrimur1471/ehr_audit_system/tree/master/code/server
project_urls =
    Bug Tracker = https://github.com/hallgrimur1471/ehr_audit_system/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >= 3.9

[options.packages.find]
where = src